--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<br/>
 		
 			<h3>Contribute</h3>
-			If you have any awesome playlists, <a href="#contact" ><i class="fa fa-envelope"></i></a> me or pull request @ <a href="http://www.github.com/aungthurhahein/coderplaylist.git"><i class="fa fa-github-alt"></i></a>
+			If you have any awesome playlists, <a href="#contact" ><i class="fa fa-envelope"></i></a> me or pull request @ <a href="https://github.com/aungthurhahein/coderplaylist"><i class="fa fa-github-alt"></i></a>
 			</p>
 		</div>
 
