--- a/index.html
+++ b/index.html
@@ -70,35 +70,30 @@
 			<h2><i class="fa fa-spotify"></i> Spotify</h2>
 			<ul>
 				<li >
-					Coding Music
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:kyleballard:playlist:2GI6wbTjS4M4QHN8PbsIr0" width="300" height="380" frameborder="0" allowtransparency="true"></iframe></li>
+					
+					<a href="https://embed.spotify.com/?uri=spotify:user:kyleballard:playlist:2GI6wbTjS4M4QHN8PbsIr0" target="_blank">Coding Music</a>				
+				</li>
+				
 				<li>
-					Coding Programming Hacking
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:125937873:playlist:5SgJR30RfzR5hO21TsQhBp" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:125937873:playlist:5SgJR30RfzR5hO21TsQhBp" target="_blank"> Coding Programming Hacking</a>					
 				</li>
 				<li>
-					Code Jam 
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:126055616:playlist:2na0OLODLTyWACsT1mctkb" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:126055616:playlist:2na0OLODLTyWACsT1mctkb" target="_blank"> Code Jam</a> 					
 				</li>
 				<li>
-					Programming
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:johanbrook:playlist:2mtlhuFVOFMn6Ho3JmrLc2" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href ="https://embed.spotify.com/?uri=spotify:user:johanbrook:playlist:2mtlhuFVOFMn6Ho3JmrLc2" target="_blank">Programming</a>					
 				</li>
 				<li>
-					Codes
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:codessl:playlist:7dOoBjdePAQ8BtZNszD2CA" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:codessl:playlist:7dOoBjdePAQ8BtZNszD2CA" target="_blank"> Codes</a>					
 				</li>		
 				<li>
-					Writing Code
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:1244345802:playlist:1AKrD9dQP4mWisLfTUON5L" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:1244345802:playlist:1AKrD9dQP4mWisLfTUON5L" target="_blank">Writing Code</a>					
 				</li>		
 				<li>
-					Reddit Coder:Down Tempo
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:fgutz:playlist:3dBiKJSoAQ6msoYzl99wp2" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:fgutz:playlist:3dBiKJSoAQ6msoYzl99wp2" target="_blank">Reddit Coder:Down Tempo</a>					
 				</li>
 				<li>
-					Code
-					<iframe src="https://embed.spotify.com/?uri=spotify:user:petecook:playlist:2Yw6qaLAkswrPt32cBOr75" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+					<a href="https://embed.spotify.com/?uri=spotify:user:fgutz:playlist:3dBiKJSoAQ6msoYzl99wp2" target="_blank">Code</a>					
 				</li>
 			</ul>
 		</div>
@@ -106,36 +101,31 @@
 		
 		<!-- 8 tracks -->
 		<div class="one-third column">
-		<h2><img src="images/8tracksicon.png" width=30 height=25> 8 tracks</h2>
+			<h2><img src="images/8tracksicon.png" width=30 height=25> 8 tracks</h2>
 
-		<ul>
-			Awesome Mixtape
-			<li><iframe src="http://8tracks.com/mixes/4566290/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="?utm_medium=trax_embed">Awesome Mixtape Vol. 1</a> from <a href="?utm_medium=trax_embed">hardcore0emily</a> on <a href="http://8tracks.com?utm_medium=trax_embed">8tracks Radio</a>.</p>
-</li>
-<li>
-	Discovered 8 tracks
-	<iframe src="http://8tracks.com/mixes/2459961/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="?utm_medium=trax_embed">Discovered 8tracks</a> from <a href="?utm_medium=trax_embed">atrx</a> on <a href="http://8tracks.com?utm_medium=trax_embed">8tracks Radio</a>.</p>
-
-</li>
-<li>
-	Coding Mix
-	<iframe src="http://8tracks.com/mixes/2832123/player_v3_universal" width="300" height="250" style="border: 0px none;"></iframe>
-<p class="_8t_embed_p" style="font-size: 11px; line-height: 12px;"><a href="?utm_medium=trax_embed">Coding Mix</a> from <a href="?utm_medium=trax_embed">lmiguelvargasf</a> on <a href="http://8tracks.com?utm_medium=trax_embed">8tracks Radio</a>.</p>
-
-</li>
-		</ul>
+			<ul>		
+				<li>
+				<a href="http://8tracks.com/mixes/4566290/player_v3_universal" target="_blank">Awesome Mixtape</a>
+			</li>
+			<li>
+				<a href="http://8tracks.com/mixes/2459961/player_v3_universal" target="_blank">Discovered 8 tracks</a>	
+			</li>
+			<li>
+				<a href="http://8tracks.com/mixes/2832123/player_v3_universal" target="_blank">Coding Mix</a>
+			</li>		
+			</ul>
 		</div>
 
 		<!-- youtube -->
 		<div class="one-third column">
 			<h2><i class="fa fa-youtube-play"> </i> Youtube</h2>
 			
-			<iframe width="300" height="200" src="//www.youtube.com/embed/videoseries?list=PLEFFBA2CCAF79744B" frameborder="0" allowfullscreen></iframe>
-
+			<ul>
+				<li>
+					<a href="http://www.youtube.com/embed/videoseries?list=PLEFFBA2CCAF79744B" target="_blank">Coder Music</a>
+				</li>
+			</ul>			
 		</div>
-
 	</div><!-- container -->
 <!-- End Document
 ================================================== -->
