polish and change bg

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	<!-- Favicons
 	================================================== -->
 	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" href="images/shebang.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/shebang.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/shebang.png">
 
 </head>
 <body>
@@ -47,31 +47,37 @@
 	<!-- Delete everything in this .container and get started on your own site! -->
 
 	<div class="container">
-		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px"><i class="fa fa-code"></i> Coder Playlists</h1>			
+		<div class="sixteen columns">			
+				<h1 class="remove-bottom" style="margin-top: 40px"><i class="fa fa-code"></i> Coder Playlist</h1>						
 			<hr />
 		</div>
-		
 		<div class="one-eleven column">
 			<h3>Infinite Music Jam</h3>
-			<p>For <b>developers and programmers</b>, most of us listen to music all the time when we are working.<br/> 
-			For guys who run out of playlists (like me) or who don't have time to make playlists, this is the solution for it. 
+			<p>
+				For <b>developers and programmers</b>, most of us listen to music all the time when we are working.<br/> 
+				For guys who run out of playlists (like me) or who don't have time to make playlists, this is the solution for it. 
 			<br/>
 		
 			<h3>Contribute</h3>
-			If you have any awesome playlists, <a href="#contact" ><i class="fa fa-envelope"></i></a> me or pull request @ <a href="https://github.com/aungthurhahein/coderplaylist"><i class="fa fa-github-alt"></i></a>
+
+			If you have any awesome music jams, share to fellow coders by
+			<a href="https://twitter.com/intent/tweet?screen_name=AtrHein&amp;text= Pls%20add%20'playlistName%20:%20userName'%20from%20'serviceName'.%20%23coderplaylist" data-related="AtrHein,AtrHein" onclick="ga('send', 'event', 'nav', 'click', 'add new');" title="twitter"><i class="fa fa-twitter"></i></a> me or pull request @ <a href="https://github.com/aungthurhahein/coderplaylist" onClick="ga('send', 'event', 'nav', 'click', 'add new'); title="github"><i class="fa fa-github-alt"></i></a>.		
 			</p>
 		</div>
-
 		<hr/>
 
+		<div class="sixteen columns">
+			<a href="https://twitter.com/intent/tweet?screen_name=AtrHein&amp;text= Pls%20add%20'playlistName%20:%20userName'%20from%20'serviceName'.%20%23coderplaylist" data-related="AtrHein,AtrHein" onClick="ga('send', 'event', 'nav', 'click', 'add new');" title="twitter"target="_blank">ADD NEW PLAYLISTS</a>			
+		</div>	
 		<!-- spotify embed -->
 		<div class="one-third column">
 			<h2><i class="fa fa-spotify"></i> Spotify</h2>
 			<ul>
 				<li >
 					
-					<a href="https://embed.spotify.com/?uri=spotify:user:kyleballard:playlist:2GI6wbTjS4M4QHN8PbsIr0" target="_blank">Coding Music</a>				
+					<a href="https://embed.spotify.com/?uri=spotify:user:kyleballard:playlist:2GI6wbTjS4M4QHN8PbsIr0" target="_blank">Coding Music</a>			
+
+					<a href="https://twitter.com/AtrHein" target="_blank">Atrhein</a>	
 				</li>
 				
 				<li>
@@ -97,7 +103,7 @@
 				</li>
 			</ul>
 		</div>
-
+	
 		
 		<!-- 8 tracks -->
 		<div class="one-third column">
@@ -129,5 +135,17 @@
 	</div><!-- container -->
 <!-- End Document
 ================================================== -->
+<!-- ga -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56559055-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
