--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<hr/>
 
 		<div class="sixteen columns ">
-			<a href="https://twitter.com/intent/tweet?screen_name=AtrHein&amp;text= Pls%20add%20'playlistName%20:%20userName'%20from%20'serviceName'.%20%23coderplaylist" data-related="AtrHein,AtrHein" onClick="ga('send', 'event', 'nav', 'click', 'add new');" title="twitter"target="_blank">ADD NEW PLAYLISTS</a>			
+			<a href="https://atrx.typeform.com/to/CbWmNQ" data-mode="1" target="_blank" onClick="ga('send', 'event', 'nav', 'click', 'add new');" >ADD NEW PLAYLISTS</a>			
 		</div>	
 		<!-- spotify embed -->
 		<div class="one-third column">
