--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<hr/>
 
 		<div class="sixteen columns ">
-			<a href="https://atrx.typeform.com/to/CbWmNQ" data-mode="1" target="_blank" onClick="ga('send', 'event', 'nav', 'click', 'add new');" >ADD NEW PLAYLISTS</a>			
+			<a class="typeform-share link" href="https://atrx.typeform.com/to/CbWmNQ" data-mode="1" target="_blank" onClick="ga('send', 'event', 'nav', 'click', 'add new');">ADD NEW PLAYLISTS</a>	
 		</div>	
 		<!-- spotify embed -->
 		<div class="one-third column">
@@ -145,6 +145,9 @@
   ga('create', 'UA-56559055-1', 'auto');
   ga('send', 'pageview');
 
+</script>
+<script>
+	(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()
 </script>
 
 </body>
