--- a/index.html
+++ b/index.html
@@ -115,9 +115,21 @@
 		<!-- 8 tracks -->
 		<div class="one-third column">
 			<h2><img src="images/8tracksicon.png" width=30 height=25> 8 tracks</h2>
-
-			<ul>		
-				<li>
+			
+		<ul>		
+			<li>
+				
+				<a href="http://8tracks.com/mixes/5040932/player_v3_universal" target="_blank">Parser</a>
+				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+			<li>
+				<a href="http://8tracks.com/mixes/4969583/player_v3_universal" target="_blank">⌘ encrypted ⌘</a>
+				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+			</li>
+			<li>
+				<a href="http://8tracks.com/mixes/4566290/player_v3_universal" target="_blank">Awesome Mixtape</a>
+				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+			</li>
+			<li>
 				<a href="http://8tracks.com/mixes/4566290/player_v3_universal" target="_blank">Awesome Mixtape</a>
 				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
 			</li>
@@ -129,7 +141,7 @@
 				<a href="http://8tracks.com/mixes/2832123/player_v3_universal" target="_blank">Coding Mix</a>
 				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
 			</li>		
-			</ul>
+		</ul>
 		</div>
 
 		<!-- youtube -->
