--- a/index.html
+++ b/index.html
@@ -128,11 +128,7 @@
 			<li>
 				<a href="http://8tracks.com/mixes/4566290/player_v3_universal" target="_blank">Awesome Mixtape</a>
 				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
-			</li>
-			<li>
-				<a href="http://8tracks.com/mixes/4566290/player_v3_universal" target="_blank">Awesome Mixtape</a>
-				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
-			</li>
+			</li>			
 			<li>
 				<a href="http://8tracks.com/mixes/2459961/player_v3_universal" target="_blank">Discovered 8 tracks</a>	
 				<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
@@ -150,9 +146,32 @@
 			
 			<ul>
 				<li>
+					<a href="http:///www.youtube.com/embed/svngvOLPd5E" target="_blank">Concentration \ Programming I</a>
+					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+				</li>
+				<li>
+					<a href="http:///www.youtube.com/embed/pmxYePDPV6M" target="_blank">Concentration \ Programming II</a>
+					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+				</li>
+				<li>
+					<a href="http:///www.youtube.com/embed/Pwrhzfsq8t4" target="_blank">Concentration \ Programming III</a>
+					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+				</li>
+				<li>
 					<a href="http://www.youtube.com/embed/videoseries?list=PLEFFBA2CCAF79744B" target="_blank">Coder Music</a>
 					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
 				</li>
+				<li>
+					<a href="http://www.youtube.com/embed/videoseries?list=r8udDcOUC3s" target="_blank">Music for Programming</a>
+					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+				</li>		
+
+				<li>
+					<a href="http://www.youtube.com/embed/videoseries?list=PLjwdah_SEU7rDIP_xBDy513_QAkOMG_s_" target="_blank">Music to listen while coding</a>
+					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
+				</li>		
+				
+
 			</ul>			
 		</div>
 	</div><!-- container -->
