--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
 					<a href="https://twitter.com/AtrHein" target="_blank"><img src="https://pbs.twimg.com/profile_images/529665336476332032/zaFKG1ii_mini.png" class="author"></a>
 				</li>		
 				
-
 			</ul>			
 		</div>
+		<hr/>
+		Created by <a href="http://aungthurhahein.me" target="_blank">Aung</a>
 	</div><!-- container -->
 <!-- End Document
 ================================================== -->
